<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Bem Vindo!</string>
    <string name="please_enter_your_name">Por favor digite seu nome.</string>
    <string name="start">Começar</string>
    <string name="e_g_john">Seu Nome</string>
    <string name="custom_toast_message">custom toast message</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="resultado">Resultado</string>
    <string name="congratulations">Ei, Parabéns!</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="trophy_image">Imagem do Troféu</string>
</resources>