<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"

    tools:context=".MainActivity">

    <TextView
        app:layout_constraintBottom_toTopOf="@id/sv_quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:fillViewport="true"
        android:id="@+id/sv_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"

            app:cardCornerRadius="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="#363A43"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/please_enter_your_name"
                    android:textColor="#7A8089"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_g_john"
                        android:inputType="textCapWords"
                        android:textColor="#363A43"
                        android:textColorHint="#7A8089" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>